--- a/JavaScript y Python/index.html
+++ b/JavaScript y Python/index.html
@@ -32,6 +32,10 @@
 <button type="button" onclick="longitud()">Mostrar!</button>
 <h1 id="titulo">Búsqueda de cadena</h1>
 <button type="button" onclick="busquedaCadena()">Mostrar!</button>
+<h1 id="titulo">Objetos de fechas</h1>
+<button type="button" onclick="fechas()">Mostrar!</button>
+<h1 id="titulo">Random</h1>
+<button type="button" onclick="random()">Mostrar!</button>
 
 <body>
  
