--- a/JavaScript y Python/index.html
+++ b/JavaScript y Python/index.html
@@ -36,6 +36,12 @@
 <button type="button" onclick="fechas()">Mostrar!</button>
 <h1 id="titulo">Random</h1>
 <button type="button" onclick="random()">Mostrar!</button>
+<h1 id="titulo">Sentencia Else If</h1>
+<button type="button" onclick="elseIf()">Mostrar!</button>
+<h1 id="titulo">Switch</h1>
+<button type="button" onclick="jsSwitch()">Mostrar!</button>
+<h1 id="titulo">TryCatch</h1>
+<button type="button" onclick="tryCatch()">Mostrar!</button>
 
 <body>
  
